Enregistrer dans la base de données les titres de videos
